segundo commit mejoras varias

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
         <ngb-carousel *ngIf="imagenesHome" class="carousel-home mb-4">
             <ng-template ngbSlide *ngFor="let image of imagenesHome">
                 <div class="picsum-img-wrapper">
-                    <img [src]="image.urlImagen" class="img-fluid w-100 h-25" alt="Random slide">
+                    <img [src]="image.urlImagen" class="img-fluid w-100 h-75" alt="imagen_home">
                 </div>
             </ng-template>
         </ngb-carousel>
