--- a/src/app/components/galeria/galeria.component.html
+++ b/src/app/components/galeria/galeria.component.html
@@ -4,7 +4,7 @@
         <ngb-carousel *ngIf="imagenesGaleria" class="carousel-galeria mb-4">
             <ng-template ngbSlide *ngFor="let image of imagenesGaleria">
                 <div class="picsum-img-wrapper">
-                    <img [src]="image.urlImagen" class="img-fluid w-100 h-25" alt="Random slide">
+                    <img [src]="image.urlImagen" class="img-fluid w-100 h-25" alt="imagen_galeria">
                 </div>
             </ng-template>
         </ngb-carousel>
